# auto-clicker

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: gui.rs  main.rs  window.rs
